# SafePick

./: .gitignore  AGENTS.md
backend/: main.py  requirements.txt  test_db.py  test_filter.py
backend/app/: __init__.py
backend/app/pdf/: generator.py
backend/app/physics/: __init__.py  engine.py
database/: schema.sql  wrangler.toml
docs/: SPEC.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  Portal.tsx  index.css  types.ts
frontend/src/services/: api.ts
worker/: pyproject.toml  requirements.txt  worker.py
